# zs_library

./: .dumirc.ts  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  rspress.config.ts  stats.html  tailwind.config.js  tailwind.css  tsconfig.app.json  tsconfig.json  tsconfig.rspress.json  tsconfig.rspress.tsbuildinfo  vite.config.ts
.trae/rules/: project_rules.md
docs/: _meta.json  index.md
docs/changelog/: GitCommits.tsx  GitReleases.tsx  _meta.json  index.mdx
docs/components/: Desktop.md  MdEditor.md  _meta.json  index.md
docs/components/data_display/: _meta.json  geomap.md  markdown.md  photo-watermark.mdx
docs/components/data_entry/: _meta.json  editor.md  id-photo-checker.mdx  mdEditor.md  simple-editor.mdx  simpleEditor.md
docs/components/layout/: desktop-next.md  desktop.md  dock.md
docs/examples/: _meta.json
docs/examples/Desktop/: _meta.json  desktop.mdx
docs/examples/Desktop&Dock/: desktop&dock.mdx
docs/examples/desktop/: access-state-config.mdx
docs/guide/start/: getting-started.mdx  introduction.md
src/: index.ts  index.tsx  types.d.ts
src/Desktop/: Sortable.tsx  config.ts  context.tsx  hook.ts  index.md  index.tsx  types.ts  utils.ts
src/Desktop/ContextMenu/: index.tsx
src/Desktop/Items/: GroupItem.tsx  (+1 more)
src/Editor/: index.md  index.tsx  interface.ts
src/Foo/: index.md
src/components/: index.tsx
src/components/photo-watermark/src-wasm/: Cargo.toml  build-wasm.mjs
src/components/photo-watermark/src-wasm/src/: lib.rs  main.rs
src/hooks/: useIsMobile.ts
src/i18n/: context.tsx  hooks.ts  index.ts  provider.tsx
(+321 files in other folders)
